# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
include/nn/layer/: affine.hpp  layer.hpp  relu.hpp  sigmoid.hpp
include/nn/loss/: cross_entropy_loss.hpp  l1.hpp  l2.hpp  loss.hpp
include/nn/math/: matrix.hpp  vector.hpp
include/nn/network/: network.hpp
include/nn/optimizer/: optimizer.hpp  sgd.hpp
src/: CMakeLists.txt  main.cpp
src/layer/: CMakeLists.txt  affine.cpp  layer.cpp  relu.cpp  sigmoid.cpp
src/loss/: CMakeLists.txt  cross_entropy_loss.cpp  l1.cpp  l2.cpp  loss.cpp
src/math/: CMakeLists.txt  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
src/network/: CMakeLists.txt  network.cpp
src/network/layer/: CMakeLists.txt  affine.cpp  affine.hpp  layer.cpp  layer.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp
src/network/loss/: CMakeLists.txt  cross_entropy_loss.cpp  cross_entropy_loss.hpp  l1.cpp  l1.hpp  l2.cpp  l2.hpp  loss.cpp  loss.hpp
src/optimizer/: CMakeLists.txt  optimizer.cpp  sgd.cpp
test/: CMakeLists.txt  main.cpp
